Add initial dependencies